argo-apps/.django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 85
    targetPort: 8000
