argo-apps/.django/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django
  namespace: django
  annotations:
    alb.ingress.kubernetes.io/group.name: argo-cd-cluster
    alb.ingress.kubernetes.io/group.order: "4"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/success-codes: "200,301,302"
    external-dns.alpha.kubernetes.io/hostname: django.tbalza.net
spec:
  ingressClassName: alb
  rules:
  - host: django.tbalza.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
